--- a/css/style.css
+++ b/css/style.css
@@ -135,9 +135,10 @@ header{
     animation: abajo-anim 1.6s infinite;
 }
 .home-bang{
-    height: 120vh;
+    height: 100vh;
     padding: 40px;
     margin-bottom: 10%;
+    overflow-y: hidden;
 }
 .promos{
     animation: encoger 2s infinite;
@@ -158,6 +159,27 @@ header{
     gap: 20px;
     padding: 20px;
     font-family: 'Geomanist';
+}
+.agotado-bang{
+    position: relative;
+    width: 250px;
+    z-index: 100;
+}
+.agotado-bang::after {
+    content: "AGOTADO";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.6);
+    color: rgb(255, 0, 0);
+    font-size: 24px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
 }
 .product-bang{
     display: flex;
@@ -388,12 +410,11 @@ header{
 .comprar-whatsapp:hover, .comprar-instagram:hover{
     transform: scale(1.05);
 }
-
 .ventana-fondo img{
     position: absolute;
     z-index: 1;
     width: 490px;
-    top: 10%;
+    top: 15%;
     border-radius: 5px;
 }
 .cerrar-ventana{
@@ -1049,6 +1070,22 @@ footer{
     }
     .productos-vopk{
         margin-bottom: 100%;
+    }
+    .agotado-bang::after {
+        content: "AGOTADO";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 88%;
+        height: 100%;
+        background: rgba(0,0,0,0.6);
+        color: rgb(255, 0, 0);
+        font-size: 24px;
+        font-weight: bold;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 2;
     }
     .product-bang, .product-vopk, .product-razzbar, .product-waspe{
         width: 100%;
