--- a/css/style.css
+++ b/css/style.css
@@ -970,18 +970,24 @@ footer{
     }
 
     /* Contenido interno de las ventanas */
-    .descripcion-bang, .descripcion-razzbar, .descripcion-vopk {
+    .descripcion-bang, .descripcion-razzbar, .descripcion-vopk, .descripcion-waspe {
         width: 100% !important;
         text-align: center;
         position: absolute !important;
         left: 63.5% !important;
-        top: 67% !important;
+        top: 65% !important;
         transform: translate(-50%, -50%);
     }
-
-    .descripcion-bang h2, .descripcion-razzbar h2, .descripcion-vopk h2, .descripcion-waspe h2 {
+    .descripcion-razzbar h2{
+        font-size: 15px !important;
+        background-color: red;
+        text-align: justify;
+    }
+    .descripcion-bang h2, .descripcion-vopk h2, .descripcion-waspe h2 {
         font-size: 15px !important;
         left: 0 !important;
+        text-align: center !important;
+        background-color: red;
     }
 
     .descripcion-bang p, .descripcion-razzbar p, .descripcion-vopk p, .descripcion-waspe p {
