--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,14 @@
 img, video{
     pointer-events: none;
 }
+@keyframes girar {
+    0% { 
+        transform: rotate(0deg); 
+    }
+    100% { 
+        transform: rotate(360deg); 
+    }
+}
 @font-face {
     font-family: 'Geomanist';
     src: url(../Fonts/geomanist-regular-webfont.ttf);
@@ -101,6 +109,39 @@ header{
 }
 /* Navegación */
 /* ------------------------------------------------- */
+.carga-fondo{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    transition: opacity 0.5s ease, visibility 0.5s ease;
+}
+.carga{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 80px;
+    height: 80px;
+    border: 10px solid rgba(255, 255, 255, 0.2); /* borde gris claro */
+    border-top: 10px solid white; /* borde superior blanco */
+    border-radius: 50%;
+    animation: girar 1s linear infinite; /* animación infinita */
+}
+.carga-fondo.oculto {
+    opacity: 0;
+    visibility: hidden;
+}
+body.cargando {
+  overflow: hidden;
+  height: 100vh;
+}
 /* Fondo del html */
 .video-fondo{
     position: fixed;
