--- a/css/style-responsive.css
+++ b/css/style-responsive.css
@@ -235,6 +235,30 @@
         font-size: 15px;
         text-align: center;
     }
+
+    .carga-fondo {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        height: 100dvh;
+        background: black;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 9999;
+    }
+
+    .carga {
+        width: 50px;
+        height: 50px;
+        border: 5px solid white;
+        border-top: 5px solid transparent;
+        border-radius: 50%;
+        animation: girar 1s linear infinite;
+    }
+    
 }
 
 @media (min-width: 431px) and (max-width: 1024px) {
